--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "appcenter": "4.4.5",
     "appcenter-analytics": "4.4.5",
     "appcenter-crashes": "4.4.5",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
