--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-device-info": "^10.4.0",
+    "react-native-flipper": "^0.187.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
