--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
     "appcenter": "4.4.5",
     "appcenter-analytics": "4.4.5",
@@ -27,6 +28,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-redux": "^8.0.5",
+    "redux-flipper": "^2.0.2",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
